--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-4 col-sm-4 logo">
-        <a href="#"><img src="images/Logo1.png" class="img-responsive" alt=""></a>
+        <a href="#"><img src="images/logo1.png" alt=""></a></a>
       </div>
       <div class="col-xs-4 col-sm-4 mid-pic">
         <img src="images/pic.png" class="center-block" alt="">
@@ -243,9 +243,9 @@
   <div class="row">
      <div class="col-md-6 col-xs-12">
         <ul class="nav nav-tabs social">
-          <li><a href="https://www.facebook.com/profile.php?id=100014657830231"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="https://github.com/Said101"><i class="fa fa-github"></i></a></li>
+          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="https://github.com/Said101" target="_blank"><i class="fa fa-github"></i></a></li>
         </ul>
      </div>
      <div class="col-md-6 col-xs-12 copy text-center">
@@ -261,7 +261,7 @@
 </div>
 </footer>
 </section>
-<!-- End Document
+<!-- End Document-->
 <!-- jQuery -->
     <script src="js/jquery-3.2.0.min.js"></script>
     <script src="js/jquery.waypoints.min.js"></script>
