sole files updated

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-4 col-sm-4 logo">
-        <a href="#"><img src="images/logo1.png" alt=""></a></a>
+        <a href="index.html"><img src="images/pic.png" alt="logo"></a></a>
       </div>
       <div class="col-xs-4 col-sm-4 mid-pic">
         <img src="images/pic.png" class="center-block" alt="">
@@ -90,7 +90,7 @@
     <section class="staggered-animation-container">
       <section class="os-animation" data-os-animation="fadeInLeftBig" data-os-animation-delay=".3s">
       <div class="col-md-6">
-      <p class="lead"> I’m a skilled front end web developer and
+      <p class="lead info"> I’m a skilled front end web developer and
       I’m constantly learning web technologies and other design related topics. The last two years i got an opportunity to be a better developmer and to grow.
 
       </div>
