index.html updated

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-xs-4 col-sm-4 logo">
-        <a href="index.html"><img src="images/pic.png" alt="logo"></a></a>
+      <div class="col-xs-4 col-sm-4 mid-pic">
+        <img src="images/pic.png" class="center-block" alt="">
       </div>
       <div class="col-xs-4 col-sm-4 mid-pic">
         <img src="images/pic.png" class="center-block" alt="">
