--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-4 col-sm-4 mid-pic">
-        <img src="images/pic.png" class="center-block" alt="">
+        <img src="images/logo1.png" class="center-block" alt="">
       </div>
       <div class="col-xs-4 col-sm-4 mid-pic">
         <img src="images/pic.png" class="center-block" alt="">
