--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
       <div class="row">
 
         <div class="col-sm-4 col-xs-4">
-            <a href="#">
-                <img class="img-responsive portfolio-item" src="images/Rectangle 2 Copy 5.png" alt="">
+            <a href="https://said101.github.io/solar-landing-page/">
+                <img class="img-responsive portfolio-item" src="images/new-size.png" alt="">
             </a>
         </div>
 
