--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/waypoints.css">
     <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/ionicons.min.css">
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/coding.png">
@@ -37,38 +38,14 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-4 col-sm-4 logo">
-        <a href="#"><img src="images/logo1.png" alt=""></a>
+        <a href="#"><img src="images/logo3.png" alt=""></a>
       </div>
       <div class="col-xs-4 col-sm-4 mid-pic">
         <img src="images/pic.png" class="center-block" alt="">
       </div>
-      <div class="col-xs-4 col-sm-4 nav-icon">
+      <div class="col-xs-4 col-sm-4 nav-button text-right">
         <!-- Navigation -->
-  <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><img src="images/Ionicons.png" alt=""></a>
-  <nav id="sidebar-wrapper">
-      <ul class="sidebar-nav">
-          <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-          <li class="sidebar-brand">
-              <a href="#top" onclick=$("#menu-close").click();>Menu</a>
-          </li>
-          <li>
-              <a href="#top" onclick=$("#menu-close").click();>Home</a>
-          </li>
-          <li>
-              <a href="#about" onclick=$("#menu-close").click();>About Me</a>
-          </li>
-          <li>
-              <a href="#portfolio" onclick=$("#menu-close").click();>Portfolio</a>
-          </li>
-          <li>
-              <a href="#skills" onclick=$("#menu-close").click();>Skills</a>
-          </li>
-
-          <li>
-              <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
-          </li>
-      </ul>
-  </nav>
+       <button type="button" href="mailto:saidhsharif@gmail.com" class="btn btn-success"name="button"><a href="mailto:saidhsharif@gmail.com">Contact</a></button>
     </div>
 
 
@@ -89,22 +66,35 @@
     <div class="row">
     <section class="staggered-animation-container">
       <section class="os-animation" data-os-animation="fadeInLeftBig" data-os-animation-delay=".3s">
-      <div class="col-md-6">
+      <div class="col-md-12">
       <p class="lead info"> I’m a skilled front end web developer and
       I’m constantly learning web technologies and other design related topics. The last two years i got an opportunity to be a better developmer and to grow.
 
       </div>
     </section>
-    <section class="os-animation" data-os-animation="fadeInRightBig" data-os-animation-delay=".3s">
-      <div class="col-md-6">
-        <img src="images/unity-theme.png" class="img-responsive " alt="">
-      </div>
-    </section>
+
       </div>
     </div>
   </div>
 </section>
-
+<hr>
+<section id="services">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 text-center">
+       <i class="ion-paintbrush icon-big"></i>
+        <h2>Design</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut .</p>
+      </div>
+      <div class="col-md-6 text-center">
+        <i class="ion-settings icon-big"></i>
+        <h2>Development</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut .</p>
+      </div>
+    </div>
+  </div>
+</section>
+<hr>
 <section id="portfolio">
   <div class="container">
    <div class="row">
@@ -115,57 +105,32 @@
 
         <div class="col-sm-4 col-xs-4">
             <a href="https://said101.github.io/solar-landing-page/">
+                <img class="img-responsive portfolio-item" src="images/new-size.png" alt="" target="_blank">
+            </a>
+        </div>
+
+        <div class="col-sm-4 col-xs-4">
+            <a href="https://said101.github.io/solar-landing-page/">
                 <img class="img-responsive portfolio-item" src="images/new-size.png" alt="">
             </a>
         </div>
 
         <div class="col-sm-4 col-xs-4">
-            <a href="#">
-                <img class="img-responsive portfolio-item" src="images/Rectangle 2 Copy.png" alt="">
-            </a>
-        </div>
-
-        <div class="col-sm-4 col-xs-4">
-            <a href="#">
-                <img class="img-responsive portfolio-item" src="images/Rectangle 2.png" alt="">
+            <a href="https://said101.github.io/solar-landing-page/">
+                <img class="img-responsive portfolio-item" src="images/new-size.png" alt="">
             </a>
         </div>
 
      </div>
      <!-- /.row -->
-         <br>
-     <!-- Related Projects Row -->
-        <div class="row">
 
-
-
-            <div class="col-sm-4 col-xs-4">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="images/Rectangle 2 Copy 2.png" alt="">
-                </a>
-            </div>
-
-            <div class="col-sm-4 col-xs-4">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="images/Rectangle 2 Copy 3.png" alt="">
-                </a>
-            </div>
-
-            <div class="col-sm-4 col-xs-4">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="images/Rectangle 2 Copy 4.png" alt="">
-                </a>
-            </div>
-
-        </div>
-        <!-- /.row -->
        </div>
       </section>
         <section class="os-animation" data-os-animation="fadeInRightBig" data-os-animation-delay=".3s">
 
       <div class="col-md-3">
         <h2>Portfolio</h2>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu .</p>
+        <p class="lead">This is a sketch app files which i coded and made it the design something working</p>
       </div>
     </section>
     </div>
@@ -175,87 +140,30 @@
 
 
 
-<section id="skills">
-  <div class="container">
-    <div class="row">
-       <section class="os-animation" data-os-animation="fadeInDown" data-os-animation-delay=".5s">
-       <div class="col-md-12 heading text-center">
-         <h2>Skills</h2>
-       </div>
-     </section>
-    </div>
-    <div class="row">
-    <section class="staggered-animation-container">
-      <section class="os-animation" data-os-animation="fadeInLeftBig" data-os-animation-delay=".3s">
-        <div class="col-md-3">
-           <br>
-        </div>
-      <div class="col-md-3 text-center">
-        <ul>
-        <li>HTML5</li>
-        <li>CSS3</li>
-        <li>JavaScript</li>
-        <li>Jquery</li>
-        </ul>
-      </div>
-    </section>
-    <section class="os-animation" data-os-animation="fadeInRightBig" data-os-animation-delay=".3s">
-      <div class="col-md-3 text-center">
-        <ul>
-        <li>Wordpress</li>
-        <li>Sass</li>
-        <li>Gulp.js</li>
-        <li>Npm</li>
-        <li>Skech App</li>
-        </ul>
-      </div>
-      <div class="col-md-3">
-         <br>
-      </div>
-    </section>
-      </div>
-    </div>
-  </div>
-</section>
 
 
 
 
-<section id="contact">
-  <div class="container">
-    <div class="row">
-
-       <section class="os-animation" data-os-animation="fadeInRightBig" data-os-animation-delay=".2s">
-
-      <div class="col-md-12 text-right" class="contact">
-        <a href="#"><i class="fa fa-phone-square"></i> +4368864841293</a>
-      </div>
-      <div class="col-md-12 text-right" class="contact">
-        <a href="mailto:saidhsharif@gmail.com"><i class="fa fa-envelope"></i> Email:Contact Me</a>
-      </div>
-    </section>
-    </div>
-  </div>
-</section>
+<hr>
 
 <footer>
 <div class="container">
   <div class="row">
-     <div class="col-md-6 col-xs-12">
-        <ul class="nav nav-tabs social">
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="https://github.com/Said101" target="_blank"><i class="fa fa-github"></i></a></li>
-        </ul>
-     </div>
-     <div class="col-md-6 col-xs-12 copy text-center">
-        <p>2017 &copy; Sharif Portfolio Reserved</p>
-     </div>
+    <div class="col-md-4 col-sm-4 text-center">
+        <p>Plan</p>
+    </div>
 
-  </div>
-  <div class="row">
-    <div class="col-md-12 footer-icon">
-        <img src="images/extension - material copy.png" class="img-responsive center-block footer-icon" alt="">
+    <div class="col-md-4 col-sm-4 text-center">
+        <p>Find Me</p>
+    </div>
+    <div class="col-md-4 col-sm-4 text-center">
+
+         <ul class="nav  navbar-nav">
+           <li><i class="ion-social-facebook-outline"></i></li>
+            <li><i class="ion-social-twitter-outline"></i></li>
+             <li><i class="ion-social-whatsapp-outline"></i></li>
+              <li><i class="ion-social-github-outline"></i></li>
+         </ul>
     </div>
   </div>
 </div>
@@ -270,32 +178,6 @@
     <script src="js/bootstrap.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script>
-    // Closes the sidebar menu
-    $("#menu-close").click(function(e) {
-        e.preventDefault();
-        $("#sidebar-wrapper").toggleClass("active");
-    });
-    // Opens the sidebar menu
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#sidebar-wrapper").toggleClass("active");
-    });
-    // Scrolls to the selected menu item on the page
-    $(function() {
-        $('a[href*=#]:not([href=#],[data-toggle],[data-target],[data-slide])').click(function() {
-            if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
-                var target = $(this.hash);
-                target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-                if (target.length) {
-                    $('html,body').animate({
-                        scrollTop: target.offset().top
-                    }, 1000);
-                    return false;
-                }
-            }
-        });
-    });
-  </script>
+
 </body>
 </html>
