portfolio section updated

--- a/index.html
+++ b/index.html
@@ -33,54 +33,43 @@
 </head>
 <body>
 
-<head>
 
+<div id="header">
   <div class="container">
     <div class="row">
-      <div class="col-xs-4 col-sm-4 logo">
+      <div class="col-xs-6 col-sm-6 logo">
         <a href="#"><img src="images/logo3.png" alt=""></a>
       </div>
-      <div class="col-xs-4 col-sm-4 mid-pic">
-        <img src="images/pic.png" class="center-block" alt="">
-      </div>
-      <div class="col-xs-4 col-sm-4 nav-button text-right">
+
+      <div class="col-xs-6 col-sm-6 nav-button text-right">
         <!-- Navigation -->
        <button type="button" href="mailto:saidhsharif@gmail.com" class="btn btn-success"name="button"><a href="mailto:saidhsharif@gmail.com">Contact</a></button>
     </div>
 
 
       </div>
-    </div>
-  </div>
-</head>
 
-<section id="about">
-  <div class="container">
-    <div class="row">
-       <section class="os-animation" data-os-animation="fadeInDown" data-os-animation-delay=".5s">
-       <div class="col-md-12 heading">
+
+
+
+
+
+       <div class="hero-heading">
          <h1>Who Am i?</h1>
        </div>
-     </section>
-    </div>
-    <div class="row">
-    <section class="staggered-animation-container">
-      <section class="os-animation" data-os-animation="fadeInLeftBig" data-os-animation-delay=".3s">
-      <div class="col-md-12">
-      <p class="lead info"> I’m a skilled front end web developer and
-      I’m constantly learning web technologies and other design related topics. The last two years i got an opportunity to be a better developmer and to grow.
+
+
+      <div class="hero-info">
+      <p class="lead"> Hello. I'm Sharif, a front end web developer living in London plain and simple, i love developing and and making the Design something working.</p>
 
       </div>
-    </section>
 
-      </div>
     </div>
-  </div>
-</section>
+  </div><!--header-->
+
 <hr>
 <section id="services">
   <div class="container">
-    <div class="row">
       <div class="col-md-6 text-center">
        <i class="ion-paintbrush icon-big"></i>
         <h2>Design</h2>
@@ -89,10 +78,10 @@
       <div class="col-md-6 text-center">
         <i class="ion-settings icon-big"></i>
         <h2>Development</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut .</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut .</p>
       </div>
     </div>
-  </div>
+
 </section>
 <hr>
 <section id="portfolio">
@@ -139,35 +128,41 @@
 </section>
 
 
-
-
-
-
-
 <hr>
 
 <footer>
 <div class="container">
-  <div class="row">
     <div class="col-md-4 col-sm-4 text-center">
-        <p>Plan</p>
+        <h3>Plan</h3>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
     </div>
 
-    <div class="col-md-4 col-sm-4 text-center">
-        <p>Find Me</p>
-    </div>
-    <div class="col-md-4 col-sm-4 text-center">
+      <div class="col-md-4 col-sm-4 text-center">
+         <h3>Find Me</h3>
+        <a href="#"><i class="ion-ios-telephone-outline contact"></i> +436641779497</a>
+        <br>
+         <a href="#"><i class="ion-ios-email-outline contact"></i> Email Me</a>
+      </div>
 
-         <ul class="nav  navbar-nav">
-           <li><i class="ion-social-facebook-outline"></i></li>
-            <li><i class="ion-social-twitter-outline"></i></li>
-             <li><i class="ion-social-whatsapp-outline"></i></li>
-              <li><i class="ion-social-github-outline"></i></li>
-         </ul>
-    </div>
-  </div>
+        <div class="col-md-4 col-sm-4 text-center ">
+           <h3>Find Me</h3>
+
+            <a href="#"><i class="ion-social-facebook-outline"></i></a>
+            <a href="#"><i class="ion-social-twitter-outline"></i></a>
+            <a href="https://github.com/Said101" target="_blank"><i class="ion-social-github-outline"></i></a>
+
+        </div>
+
+
 </div>
 </footer>
+<div class="footer2">
+<div class="container">
+    <div class="col-md-12">
+      <p>2017 &copy; Sharif Portfolio All rights Reserved</p>
+    </div>
+</div>
+</div>
 </section>
 <!-- End Document-->
 <!-- jQuery -->
