--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/waypoints.css">
     <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/ionicons.min.css">
+      <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/coding.png">
@@ -71,9 +71,19 @@
 <section id="services">
   <div class="container">
       <div class="col-md-6 text-center">
-       <i class="ion-paintbrush icon-big"></i>
-        <h2>Design</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut .</p>
+       <i class="ion-gear-a icon-big"></i>
+        <h2>Skills</h2>
+        <div class="skills">
+          <ul class="skill">
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>JAVASCRIPT</li>
+            <li>JQUERY</li>
+            <li>BOOTSTRAP</li>
+            <li>SKETCH APP</li>
+          </ul>
+        </div>
+
       </div>
       <div class="col-md-6 text-center">
         <i class="ion-settings icon-big"></i>
