--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/waypoints.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/ionicons.min.css">
-    
+
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/coding.png">
@@ -144,13 +144,13 @@
 <footer>
 <div class="container">
     <div class="col-md-4 col-sm-4 text-center">
-        <h3>Plan</h3>
+        <h3>Footer</h3>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
     </div>
 
       <div class="col-md-4 col-sm-4 text-center">
          <h3>Find Me</h3>
-        <a href="#"><i class="ion-ios-telephone-outline contact"></i> +436641779497</a>
+        <a href="#"><i class="ion-ios-telephone-outline contact"></i> +44700000000</a>
         <br>
          <a href="#"><i class="ion-ios-email-outline contact"></i> Email Me</a>
       </div>
