--- a/index.html
+++ b/index.html
@@ -103,23 +103,21 @@
         <!-- Projects Row -->
       <div class="row">
 
-        <div class="col-sm-4 col-xs-4">
+        <div class="col-sm-6 col-xs-12">
             <a href="https://said101.github.io/solar-landing-page/">
-                <img class="img-responsive portfolio-item" src="images/new-size.png" alt="" target="_blank">
+                <img class="img-responsive portfolio-item" src="images/solar-landing-page-free-sample.jpg" alt="" target="_blank">
             </a>
         </div>
 
-        <div class="col-sm-4 col-xs-4">
-            <a href="https://said101.github.io/solar-landing-page/">
-                <img class="img-responsive portfolio-item" src="images/new-size.png" alt="">
+        <div class="col-sm-6 col-xs-12">
+            <a href="https://said101.github.io/brooklyn-lite/"><figure>
+                <img class="img-responsive portfolio-item" src="images/gumroad_brooklyn_lite_sketchappsources.jpg" alt="">
+                <figcaption><p>This is a project which i'm working now</p></figcaption>
+</figure>
             </a>
         </div>
 
-        <div class="col-sm-4 col-xs-4">
-            <a href="https://said101.github.io/solar-landing-page/">
-                <img class="img-responsive portfolio-item" src="images/new-size.png" alt="">
-            </a>
-        </div>
+
 
      </div>
      <!-- /.row -->
