--- a/index.html
+++ b/index.html
@@ -75,14 +75,11 @@
        <i class="ion-gear-a icon-big"></i>
         <h2>Skills</h2>
         <div class="skills">
-          <ul class="skill">
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>JAVASCRIPT</li>
-            <li>JQUERY</li>
-            <li>BOOTSTRAP</li>
-            <li>SKETCH APP</li>
-          </ul>
+          <p>HTML5, CSS3, JAVASCRIPT, JQUERY, BOOTSTRAP, SKETCH APP, CSS Preprocessors: SASS,
+           Wordpress, Git and Github,
+           Terminal, Gulp: Extensive Configuration
+          ,npm: Extensive Configuration as a task runner,
+          Package Management: npm, bower, git </p>
         </div>
 
       </div>
@@ -105,15 +102,19 @@
 
         <div class="col-sm-6 col-xs-12">
             <a href="https://said101.github.io/solar-landing-page/">
-                <img class="img-responsive portfolio-item" src="images/solar-landing-page-free-sample.jpg" alt="" target="_blank">
+              <figure>
+              <img class="img-responsive portfolio-item" src="images/solar-landing-page-free-sample.jpg" alt="" target="_blank">
+                <figcaption>Saint Tropez and its
+                fort in the evening sun</figcaption>
+            </figure>
             </a>
         </div>
 
         <div class="col-sm-6 col-xs-12">
             <a href="https://said101.github.io/brooklyn-lite/"><figure>
-                <img class="img-responsive portfolio-item" src="images/gumroad_brooklyn_lite_sketchappsources.jpg" alt="">
+                <img class="img-responsive portfolio-item" src="images/gumroad_brooklyn_lite_sketchappsources.jpg" alt="" target="_blank">
                 <figcaption><p>This is a project which i'm working now</p></figcaption>
-</figure>
+           </figure>
             </a>
         </div>
 
