--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
             <a href="https://said101.github.io/solar-landing-page/">
               <figure>
               <img class="img-responsive portfolio-item" src="images/solar-landing-page-free-sample.jpg" alt="" target="_blank">
-                <figcaption>Saint Tropez and its
-                fort in the evening sun</figcaption>
+                <figcaption>This is a Personal project which i finished 90%</figcaption>
             </figure>
             </a>
         </div>
@@ -113,7 +112,7 @@
         <div class="col-sm-6 col-xs-12">
             <a href="https://said101.github.io/brooklyn-lite/"><figure>
                 <img class="img-responsive portfolio-item" src="images/gumroad_brooklyn_lite_sketchappsources.jpg" alt="" target="_blank">
-                <figcaption><p>This is a project which i'm working now</p></figcaption>
+                <figcaption><p>This is a project which i'm working on now</p></figcaption>
            </figure>
             </a>
         </div>
