Day three sections colours were updated

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                     <li><img src="images/gumroad_brooklyn_lite_sketchappsources.jpg" alt=""><button>Project Info</button></li>
                     <li><img src="images/solar-landing-page-free-sample.jpg" alt=""> <br>
                     <button>Project Info</button></li>
-                    <li><img src="images/web-1668927_640.jpg" alt=""><br>
-                        <button>Project Info</button></li>
+                    <li><img src="images/Screen Shot 2018-02-08 at 13.28.27.jpg" alt=""><br>
+                    <button>Project Info</button></li>
                 </ul>
             </div>
         </div>
