target="_blank" added all pages

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
        <div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
            <div class="col-xs-10 col-sm-10 col-md-10 col-lg-7 hero-text">
             <h1>Who Am i?</h1>
-            <p> Hello. I'm Sharif, a front end web developer living in London plain and simple, i love developing and and making the Design something working.</p>
+            <p> My name is saacid. a front end wed developer living in London. I have passion for design. I do enjoy design and developer wed bring out the creative side.
+                This site will give individual the opportunity to forward their ideas where from we can work together to bring the vision to life.</p>
            </div>
        </div>
    </div>
@@ -91,11 +92,11 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <h2>Portfolio</h2>
                 <ul>
-                    <li><img src="images/gumroad_brooklyn_lite_sketchappsources.jpg" alt=""><button>Project Info</button></li>
-                    <li><img src="images/solar-landing-page-free-sample.jpg" alt=""> <br>
-                    <button>Project Info</button></li>
-                    <li><img src="images/Screen Shot 2018-02-08 at 13.28.27.jpg" alt=""><br>
-                    <button>Project Info</button></li>
+                    <li><a href="https://said101.github.io/brooklyn-lite/" target="_blank"><img src="images/gumroad_brooklyn_lite_sketchappsources.jpg" alt=""><button>Project Info</button></a></li>
+                    <li><a href="https://said101.github.io/solar-landing-page/" target="_blank"><img src="images/solar-landing-page-free-sample.jpg" alt=""> <br>
+                    <button>Project Info</button></a></li>
+                    <li> <a href="https://said101.github.io/horn-museum/" target="_blank"><img src="images/Screen Shot 2018-02-08 at 13.28.27.jpg" alt=""><br>
+                    <button>Project Info</button></a> </li>
                 </ul>
             </div>
         </div>
