--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
        <div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
            <div class="col-xs-10 col-sm-10 col-md-10 col-lg-7 hero-text">
             <h1>Who Am i?</h1>
-            <p> My name is saacid. a front end wed developer living in London. I have passion for design. I do enjoy design and developer wed bring out the creative side.
+            <p> My name is Saacid. a front end wed developer living in London. I have passion for development. I do enjoy design and development,  bring out the creative side.
                 This site will give individual the opportunity to forward their ideas where from we can work together to bring the vision to life.</p>
            </div>
        </div>
@@ -69,11 +69,10 @@
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
              <i class="fa fa-cog"></i>
               <h2>Skilss</h2>
-                <p>HTML5, CSS3, JAVASCRIPT, JQUERY, BOOTSTRAP, SKETCH APP, CSS Preprocessors: SASS,
-                Wordpress, Git and Github,
-                Terminal, Gulp: Extensive Configuration
-                ,npm: Extensive Configuration as a task runner,
-                Package Management: npm, bower, git </p>
+                <p>HTML5, CSS3, <br> JAVASCRIPT, JQUERY, <br> BOOTSTRAP, CSS Preprocessors: SASS, <br>
+              Git and Github, <br>
+              Gulp: Extensive Configuration  
+               </p>
 
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -93,7 +92,7 @@
                 <h2>Portfolio</h2>
                 <ul>
                     <li><a href="https://said101.github.io/brooklyn-lite/" target="_blank"><img src="images/gumroad_brooklyn_lite_sketchappsources.jpg" alt=""><button>Project Info</button></a></li>
-                    <li><a href="https://said101.github.io/solar-landing-page/" target="_blank"><img src="images/solar-landing-page-free-sample.jpg" alt=""> <br>
+                    <li><a href="https://said101.github.io/solor-template/" target="_blank"><img src="images/solar-landing-page-free-sample.jpg" alt=""> <br>
                     <button>Project Info</button></a></li>
                     <li> <a href="https://said101.github.io/horn-museum/" target="_blank"><img src="images/Screen Shot 2018-02-08 at 13.28.27.jpg" alt=""><br>
                     <button>Project Info</button></a> </li>
@@ -103,6 +102,17 @@
     </div>
 </section>
 
+<section id="form-section">
+    <div class="container">
+      <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+              <form>
+                  
+              </form>
+          </div>
+      </div>
+    </div>
+</section>
 
 
 <section id="contact-info">
